add GPL-3.0 license

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx8G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.2.1
+	mod_version = 0.0.1
 	maven_group = com.github.kpnmserver
-	archives_base_name = svrmonitor-mod
+	archives_base_name = ksvrgroup-mod
 
 # Dependencies
 	fabric_version=0.37.2+1.16
