--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	maven{
+		url "file://${System.env.HOME}/.m2/repository"
+	}
 }
 
 dependencies {
@@ -31,7 +34,7 @@ dependencies {
 	// You may need to force-disable transitiveness on them.
 
 	implementation 'com.google.code.gson:gson:2.8.8'
-	implementation 'org.java-websocket:Java-WebSocket:1.5.2'
+	implementation 'com.github.kpnmserver:kpi_mod:0.0.1'
 }
 
 processResources {
@@ -63,9 +66,6 @@ java {
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
-	}
-	manifest {
-		attributes 'Class-Path': './libs/Java-WebSocket.jar'
 	}
 }
 
