--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx8G
 # Mod Properties
 	mod_version = 0.0.1
 	maven_group = com.github.kpnmserver
-	archives_base_name = ksvrgroup-mod
+	archives_base_name = ksvrgroup_mod
 
 # Dependencies
 	fabric_version=0.37.2+1.16
